@@ -1,19 +1,30 @@
 # slirp config
 # The line above is mandatory
 
+# Supported options:
+#
+# RESTRICTED  if set to 1, only built-in services are available
+# NET         base IP address of the virtual network
+# MASK        netmask of the virtual network
+# HOST        IP address of the DHCP and TFTP server
+# HOSTNAME    DHCP client hostname
+# DHCPSTART   start address of DHCP pool
+# DNS         IP address of the virtual DNS server
+# BOOTFILE    boot filename returned by DHCP
+
 # This is the classic slirp setup
 # restricted = 0
 # net        = 10.0.2.0
 # mask       = 255.255.255.0
 # host       = 10.0.2.2
-# dhcp       = 10.0.2.15
+# dhcpstart  = 10.0.2.15
 # dns        = 10.0.2.3
 
 # This is the vnet setup
-restricted = 1
-net        = 192.168.10.0
-mask       = 255.255.255.0
-host       = 192.168.10.1
-dhcp       = 192.168.10.2
-dns        = 0.0.0.0
-bootfile   = pxelinux.0
+# restricted = 1
+# net        = 192.168.10.0
+# mask       = 255.255.255.0
+# host       = 192.168.10.1
+# dhcpstart  = 192.168.10.2
+# dns        = 0.0.0.0
+# bootfile   = pxelinux.0
